# silk_physics

./: .clangd  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  GPU_CHANGES_SUMMARY.md  GPU_DEMO_GUIDE.md  GPU_DEMO_INTEGRATION_SUMMARY.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_INTEGRATION.md  GPU_QUICK_START.md  GPU_SOLVER_DOCUMENTATION.md  GPU_VISUAL_GUIDE.md  LICENSE  README.md  TODO.md  blender_guidelines.md  ccd_reflection.csv  config.json  daasfdkjjkasdflj  edge_edge_overlay_mid.html  out.abc  sheet.off  sheet_off.py  simple_sheet.stl  temp.py  test_jacobi.cpp  test_jacobi_large  test_jacobi_large.cu  test_jacobi_simple  test_jacobi_simple.cu  vcpkg.json
demo/: CMakeLists.txt
demo/src/: alembic_writer.cpp  alembic_writer.hpp  config.hpp  config_parser.cpp  config_parser.hpp  demo.cpp  demo.hpp  eigen_alias.hpp  flags.hpp  glm_utils.cpp  glm_utils.hpp  gui_helper.hpp  gui_utils.cpp  gui_utils.hpp  headless.cpp  headless.hpp  json_parse.cpp  json_parse.hpp  kd_tree.cpp  kd_tree.hpp  main.cpp  main.cpp.orig  object.hpp  object_interface.hpp  polyscope_silk_interop.cpp  polyscope_silk_interop.hpp  position_cache.hpp  tempCodeRunnerFile.cpp  transform.cpp  transform.hpp
demo/src/objects/: cloth.cpp  cloth.hpp  draw_utils.cpp  draw_utils.hpp  obstacle.cpp  obstacle.hpp
demo/src/widgets/: cloth_simulator_widget.cpp  cloth_simulator_widget.hpp  config_widget.cpp  config_widget.hpp  gpu_solver_widget.cpp  gpu_solver_widget.hpp  help_bar_widget.cpp  help_bar_widget.hpp  model_loader_widget.cpp  model_loader_widget.hpp  object_setting_widget.cpp  object_setting_widget.hpp  scene_widget.cpp  scene_widget.hpp  selector_widget.cpp  sim_setting_widget.cpp  sim_setting_widget.hpp  simulator_widget.cpp  simulator_widget.hpp  statistic_widget.cpp  statistic_widget.hpp  ui_console.cpp  ui_console.hpp
silk/: CMakeLists.txt
silk/cmake/: silkConfig.cmake.in
silk/include/silk/: result.hpp  silk.hpp
silk/src/: CMakeLists.txt  barrier_constrain.hpp  bbox.cpp  bbox.hpp  bvh.hpp  ccd.cpp  ccd.hpp  ccd_poly.cpp  ccd_poly.hpp  cholmod_utils.cpp  cholmod_utils.hpp  cloth.cpp  cloth.hpp  cloth_solver_data.hpp  cloth_topology.cpp  cloth_topology.hpp  collision.cpp  collision.hpp  collision_broadphase.hpp  collision_helper.hpp  collision_narrowphase.cpp  collision_narrowphase.hpp  collision_pipeline.cpp  collision_pipeline.hpp  config.cpp  ecs.cpp  ecs.hpp  eigen_alias.hpp  eigen_helper.hpp  eigen_utils.hpp  gpu_object_state.hpp  handle.hpp  init_object_collider.cpp  init_object_collider.hpp  init_solver_data.cpp  init_solver_data.hpp  interval.cpp  interval.hpp  logger.hpp  make_obstacle.cpp  (+40 more)
silk/src/backend/cpu/: cpu_backend.cpp  cpu_backend.hpp  ecs.cpp  ecs.hpp  object_state.hpp  obstacle_position.hpp
silk/src/backend/cpu/collision/: bbox.cpp  bbox.hpp  broadphase.hpp  ccd.cpp  ccd.hpp  collision.hpp  interval.cpp  interval.hpp  interval_root_finder.cpp  interval_root_finder.hpp  mesh_collider.hpp  narrowphase.cpp  narrowphase.hpp  object_collider.cpp  object_collider.hpp  pipeline.cpp  pipeline.hpp
silk/src/backend/cpu/solver/: barrier_constrain.hpp  cholmod_utils.cpp  cholmod_utils.hpp  (+9 more)
silk/src/backend/cuda/: copy_vector_like.hpp  csr_matrix.cpp  csr_matrix.hpp  cuda_backend.cpp  cuda_backend.hpp  cuda_utils.cuh  cuda_utils.hpp  device_vector.hpp  ecs.cpp  ecs.hpp  eigen_cuda_interop.cuh  object_state.cpp  object_state.cuh  object_state.hpp  obstacle_position.hpp  simple_linalg.cuh  sparse_matrix_interop.cpp  sparse_matrix_interop.hpp  topology.cuh
silk/src/collision/: ccd.cpp  ccd.hpp  ccd_poly.cpp  ccd_poly.hpp  collision.hpp  collision_helper.hpp  collision_internal.hpp  collision_pipeline.cpp  interval.cpp  interval.hpp  sap.hpp  sap_kd_tree.hpp
silk/src/collision/cpu/: bbox.cpp  bbox.hpp  broadphase.hpp  ccd.cpp  ccd.hpp  collision.hpp  interval.cpp  interval.hpp  interval_root_finder.cpp  interval_root_finder.hpp  mesh_collider.hpp  narrowphase.cpp  object_collider.cpp  object_collider.hpp  pipeline.cpp  pipeline.hpp
silk/src/collision/gpu/: bvh_context.cpp  bvh_context.hpp  bvh_wrapper.hpp  collision_primitive.hpp  cuda_utils.hpp  narrowphase.hpp  object_collider.cu  object_collider.hpp  pipeline.cpp
silk/src/common/: backend.hpp  check_cuda_support.cpp  check_cuda_support.hpp  cloth_topology.cpp  cloth_topology.hpp  compiler_builtin.hpp  eigen_utils.hpp  handle.hpp  logger.hpp  manager.hpp  mesh.cpp  mesh.hpp  pin.hpp  result.cpp  world.cpp
silk/src/ecs/: component_storage.hpp  registry.hpp
silk/src/solver/: cloth_solver.cpp  cloth_solver.hpp  cloth_solver_utils.cpp  cloth_solver_utils.hpp  obstacle_solver_utils.cpp  obstacle_solver_utils.hpp  solver_pipeline.cpp  solver_pipeline.hpp
silk/src/solver/cpu/: cholmod_utils.cpp  cloth_solver_context.cpp  cloth_solver_context.hpp  cloth_solver_utils.cpp  cloth_solver_utils.hpp  obstacle_solver_utils.cpp  obstacle_solver_utils.hpp  pipeline.cpp  pipeline.hpp  u_constructor.cpp
silk/src/solver/gpu/: CMakeLists.txt  cloth_solver_context.cu  cloth_solver_context.hpp  cloth_solver_kernels.cu  cloth_solver_kernels.cuh  cloth_solver_utils.cpp  cloth_solver_utils.cu  cloth_solver_utils.hpp  cuda_utils.cpp  gpu_cloth_solver_context.cpp  gpu_cloth_solver_context.cu  gpu_cloth_solver_context.hpp  inexact_solver.cu  jacobi_solver.cu  jacobi_solver.cuh  pipeline.cu  pipeline.hpp  svd.cu  svd.cuh  test_gpu_solver.cu
test/: CMakeLists.txt  abc_file_loader.cpp  abc_file_loader.hpp  ccd_benchmark.cpp  ccd_correctness_test.cpp  ccd_performance_test.cpp  ccd_poly_test.cpp  ccd_reflection.cpp  ccd_test.cpp  ccd_test_helper.cpp  ccd_test_helper.hpp  ccd_test_utils.cpp  ccd_test_utils.hpp  collision_broadphase_test.cpp  collision_broadphase_test_helper.cpp  collision_broadphase_test_helper.hpp  collision_broadphase_test_utils.cpp  collision_broadphase_test_utils.hpp  elastic_rhs_test.cpp  jacobi_solver_test.cpp  manager_test.cpp  resource_manager_test.cpp  sap_benchmark.cpp  sap_kd_tree_benchmark.cpp  sap_kd_tree_performance_test.cpp  sap_kd_tree_test.cpp  sap_performance_test.cpp  sap_test.cpp
(+172 files in other folders)
